Fix 'Python import do not support attributes with initializers'

BUG:409209
FIXED-IN:2.28.3 (KDE Applications 19.04.3)